2008-06-26 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/dwell-click-applet.c: Add time animation to enable button.

2008-06-24 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: (dwell_do_pointer_click): Add a short delay between
	button-press and -release events. This should allow GOK to handle
	events generated by mousetweaks.

	For details see bug #538004

2008-06-23 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-common.c: Fix compiler warnings
	* src/mt-main.c: (main): Report at-spi leaks if there are any.
	(within_tolerance): rename function to below_threshold and
	remove sqrt() and pow() calls.

2008-06-16 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version increment: 2.23.5

2008-06-16 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.23.4 release.

2008-06-15 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: Remove unnecessary casts.

2008-06-15 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: Move 'drag-release' code to more appropriate place.

2008-06-15 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: (main): Use correct _unref function.
	(spi_button_event): Use position info from event.
	(spi_motion_event): Remove whitespace.

2008-06-02 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version increment to 2.23.4

2008-06-02 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.23.3 release.

2008-06-01 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/dwell-click-applet.c: Change 'enable dwell' icon to a label.

2008-05-19 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: Fix typos.

2008-05-17 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/dwell-click-applet.c:
	Fix ref counting bug.
	Add on/off button to activate dwelling.

2008-05-17 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/dwell-click-applet.c: Use a macro instead of calling
	glade_xml_get_widget all the time.
