@@ -30,7 +30,7 @@ for a specified amount of time.
 .TP
 .B \-\-dwell\-time=FLOAT
 Time to keep the pointer motionless before a dwell click is performed.
-Range: 0.5 - 3.0 seconds.
+Range: 0.2 - 3.0 seconds.
 .TP
 .B \-\-secondary\-time=FLOAT
 Time to hold the primary mouse button before a simulated secondary
